fixing text spacing on desktop

--- a/resources/styles/schedule.css
+++ b/resources/styles/schedule.css
@@ -138,7 +138,12 @@
     }
 
     .event h3 {
-        margin: 0.5rem 0 0;
+        margin: 0.5rem 0 .25rem;
+    }
+
+    .event p {
+        margin: 0;
+        margin-bottom: .25rem;
     }
 
     .event-icon {
